--- a/CosmoMix/Axel/CosmoVoiture.html
+++ b/CosmoMix/Axel/CosmoVoiture.html
@@ -37,9 +37,13 @@
         </div>
     </section>
 
-
-    <section id="articles">
-	<img href
+    <section class="section-vedette" id="articles">
+	<h1>Chevrolet</h1>
+	<div class="details-vedette">
+		<img src="images/voiture1/coté.jpeg" alt="voiture chevrolet corvette vue coté">
+		<img src="images/voiture1/avant.jpeg" alt="voiture chevrolet corvette vue devant">
+		<img src="images/voiture1/arrière.jpeg" alt="voiture chevrolet corvette vue arrière">
+	</div>
 
     <!-- Bouton retour en haut -->
     <a href="#accueil" class="bouton-retour-haut">🚀 Retour en haut</a>
